--- a/references.bib
+++ b/references.bib
@@ -545,5 +545,101 @@
 }
 
 
+@article{fried1988,
+  title = {Inseason {{Forecasting}} of {{Bristol Bay}}, {{Alaska}}, {{Sockeye Salmon}} ({{Oncorhynchus}} Nerka) {{Abundance Using Bayesian Probability Theory}}},
+  author = {Fried, Stephen M. and Hilborn, Ray},
+  year = {1988},
+  month = may,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {45},
+  number = {5},
+  pages = {850--855},
+  issn = {0706-652X},
+  doi = {10.1139/f88-103},
+  file = {/Users/danovan/Google Drive/references/Fried and Hilborn - 1988 - Inseason Forecasting of Bristol Bay, Alaska, Socke.pdf;/Users/danovan/Zotero/storage/PUL3T34U/f88-103.html}
+}
+
+
+@article{litzow2018,
+  title = {Non-Stationary Climate\textendash Salmon Relationships in the {{Gulf}} of {{Alaska}}},
+  author = {Litzow, Michael A. and Ciannelli, Lorenzo and Puerta, Patricia and Wettstein, Justin J. and Rykaczewski, Ryan R. and Opiekun, Michael},
+  year = {2018},
+  month = nov,
+  journal = {Proceedings of the Royal Society B: Biological Sciences},
+  volume = {285},
+  number = {1890},
+  pages = {20181855},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rspb.2018.1855},
+  keywords = {climate indices,non-stationary relationships,North Pacific Gyre Oscillation,novel climate,Pacific Decadal Oscillation,Pacific salmon},
+  file = {/Users/danovan/Google Drive/references/Litzow et al. - 2018 - Non-stationary climate–salmon relationships in the.pdf}
+}
+
+@article{litzow2020,
+  title = {Quantifying a {{Novel Climate Through Changes}} in {{PDO}}-{{Climate}} and {{PDO}}-{{Salmon Relationships}}},
+  author = {Litzow, Michael A. and Malick, Michael J. and Bond, Nicholas A. and Cunningham, Curry J. and Gosselin, Jennifer L. and Ward, Eric J.},
+  year = {2020},
+  journal = {Geophysical Research Letters},
+  volume = {47},
+  number = {16},
+  pages = {e2020GL087972},
+  issn = {1944-8007},
+  doi = {10.1029/2020GL087972},
+  language = {en},
+  annotation = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2020GL087972},
+  file = {/Users/danovan/Google Drive/references/Litzow et al. - 2020 - Quantifying a Novel Climate Through Changes in PDO.pdf;/Users/danovan/Zotero/storage/R7IUE4UR/2020GL087972.html}
+}
+
+@article{litzow2020a,
+  title = {The Changing Physical and Ecological Meanings of {{North Pacific Ocean}} Climate Indices},
+  author = {Litzow, Michael A. and Hunsicker, Mary E. and Bond, Nicholas A. and Burke, Brian J. and Cunningham, Curry J. and Gosselin, Jennifer L. and Norton, Emily L. and Ward, Eric J. and Zador, Stephani G.},
+  year = {2020},
+  month = apr,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {117},
+  number = {14},
+  pages = {7665--7671},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1921266117},
+  chapter = {Physical Sciences},
+  copyright = {\textcopyright{} 2020 . https://www.pnas.org/site/aboutpnas/licenses.xhtmlPublished under the PNAS license.},
+  language = {en},
+  pmid = {32205439},
+  keywords = {climate change,climate index,nonstationary relationship,North Pacific Gyre Oscillation,Pacific Decadal Oscillation},
+  file = {/Users/danovan/Google Drive/references/Litzow et al. - 2020 - The changing physical and ecological meanings of N.pdf;/Users/danovan/Zotero/storage/GRTAUS8V/7665.html}
+}
+
+
+  @Manual{park2020,
+    title = {rEDM: Empirical Dynamic Modeling ('EDM')},
+    author = {Joseph Park and Cameron Smith and George Sugihara and Ethan Deyle},
+    year = {2021},
+    note = {R package version 1.9.1},
+    url = {https://CRAN.R-project.org/package=rEDM},
+  }
+
+
+@article{ye2016,
+  title = {Information Leverage in Interconnected Ecosystems: {{Overcoming}} the Curse of Dimensionality},
+  shorttitle = {Information Leverage in Interconnected Ecosystems},
+  author = {Ye, Hao and Sugihara, George},
+  year = {2016},
+  month = aug,
+  journal = {Science},
+  publisher = {{American Association for the Advancement of Science}},
+  copyright = {Copyright \textcopyright{} 2016, American Association for the Advancement of Science},
+  language = {EN}
+}
+
+
+@Manual{chamberlain2019,
+  title = {rerddap: General Purpose Client for 'ERDDAP' Servers},
+  author = {Scott Chamberlain},
+  year = {2019},
+  note = {R package version 0.6.5},
+  url = {https://CRAN.R-project.org/package=rerddap},
+}
+
 
 
