--- a/documents/salmon-forecast-paper.tex
+++ b/documents/salmon-forecast-paper.tex
@@ -217,9 +217,9 @@ The general structure of our methods are as follows:
 
 We evaluated two different machine learning models: a random forest (rand\_forest, implemented through the \texttt{ranger} package (Wright and Ziegler 2017) in R (R Core Team 2020)), and boosted regression trees, boost\_tree, through the \texttt{xgboost} package (Chen et al. 2020). A recurrent neural network implemented through \texttt{tensorflow} (Allaire and Tang 2020) through the \texttt{keras} interface (Allaire and Chollet 2020) was also tested but was found to perform poorly relative to the other methods and to be extremely computationally intensive, and as such was not included in the main analysis. Random forests are ensembles of regression trees, which make predictions by selecting nested splits of variables and mapping the mean level of the dependent variable at the terminal nodes of each tree. Boosted regression trees are similar to random forests, but have mechanisms in place that actively update the model to address data points that the model is struggling to fit (Elith et al. 2008). For all machine learning methods, within a model fit the model selects splits/transformations/coefficients to minimize the root mean squared error (RMSE) of predictions for data withheld from the fitting process by the algorithm.
 
-Each of the machine learning methods had access to a variety of population and environmental data. We fit versions of each model separately for each age group in each major river system. Environmental datasets were queried from the NOAA ERDDAP portal using the rerddap package in R (Chamberlain 2019). Included environmental variables include sea surface temperature, sea level pressure, wind stress, and the Pacific Decadal Oscillation index. For each environmental variable, we use mean or median values within the Bristol Bay region across the months of May to August during the year in which the cohort being forecasted entered the ocean. We also included as candidate covariates natural origin returns of pink (\emph{Oncorhynchus gorbuscha}) and chum (\emph{Oncorhynchus keta}) across a range of North Pacific stocks, pulled from Ruggerone and Irvine (2018) (Table.\ref{tab:dat}).
+Each of the machine learning methods had access to a variety of population and environmental data. We fit versions of each model separately for each age group in each major river system. We tested versions of the models that fit the age groups and river systems simultaneously, but did not use this approach as it performed worse than the individual approach, likely due to our limited sample size. Environmental datasets were queried from the NOAA ERDDAP portal using the rerddap package in R (Chamberlain 2019). Included environmental variables include sea surface temperature, sea level pressure, wind stress, and the Pacific Decadal Oscillation index. For each environmental variable, we use mean or median values within the Bristol Bay region across the months of May to August during the year in which the cohort being forecasted entered the ocean. We also included as candidate covariates natural origin returns of pink (\emph{Oncorhynchus gorbuscha}) and chum (\emph{Oncorhynchus keta}) across a range of North Pacific stocks, pulled from Ruggerone and Irvine (2018) (Table.\ref{tab:dat}).
 
-When fitting models at the level of age groups by river system, data were first split into training and testing sets. We then split each of the training sets for performance testing (e.g.~all data before the year 2000 if the year 2001 is to be forecasted) into a series of analysis and assessment splits for tuning purposes. Given the timeseries nature of the data, we generated these analysis and assessment splits in a rolling manner: for the first split, we used the first 70\% of the training year to fit a model, and the remaining 30\% to evaluate the performance of that model, followed by the first 75\% and 25\%, etc. These analysis and assessment splits were used to tune nuisance parameters common to all machine learning models, for example the minimum node size of fitted trees. We fit each of our assessment splits across a grid of potential parameter values, and selected the set of tuning parameters that minimized the RMSE of the predictions on the assessment splits (see computational environment available at \url{https://github.com/DanOvando/salmon-forecast-paper/} for detailed steps in this process).
+When fitting models at the level of age groups by river system, data were first split into training and testing sets. We then split each of the training sets for performance testing (e.g.~all data before the year 2000 if the year 2001 is to be forecasted) into a series of analysis and assessment splits for tuning purposes. Given the timeseries nature of the data, we generated these analysis and assessment splits in a rolling manner: for the first split, we used the first 70\% of the training year to fit a model, and the remaining 30\% to evaluate the performance of that model, followed by the first 75\% and 25\%, etc. These analysis and assessment splits were used to tune nuisance parameters common to all machine learning models, for example the minimum node size of fitted trees (see Table S4 for complete list of tuning parameters). We fit each of our assessment splits across a grid of potential parameter values, and selected the set of tuning parameters that minimized the RMSE of the predictions on the assessment splits (see computational environment available at \url{https://github.com/DanOvando/salmon-forecast-paper/} for detailed steps in this process).
 
 Once the optimal set of tuning parameters for each training set were selected, we then fit the final model using all the training data with those tuned parameters, and used that model to predict the returns in the testing set. All relevant data transformations were prepared only on training / analysis splits (e.g.~means and standard deviations for centering and scaling) and then applied to testing / assessment splits.
 
@@ -258,7 +258,7 @@ Both regression parameters are described by a random walk (i.e.~\(\alpha_t \sim 
 \subsection*{Empirical Dynamic Modeling}\label{empirical-dynamic-modeling}}
 \addcontentsline{toc}{subsection}{Empirical Dynamic Modeling}
 
-Empirical dynamic modeling (EDM) is a nonparametric approach to characterize ecological dynamics and generate forecasts. The approach is predicated on Takens' theorem, which states that a single time series and a number of lags (dimension; E) are representative of overall system dynamics (Takens 1981; Sugihara and May 1990). Applications of EDM have identified causal relationships in ecological systems (Sugihara et al. 2012) and improved forecast skill in Fraser River sockeye salmon (Ye et al. 2015). See Munch et al. (2020) and Chang et al. (2017) for more general overviews of EDM. We used the software package rEDM (Park et al. 2021) for analysis.
+Empirical dynamic modeling (EDM) is a nonparametric approach to characterize ecological dynamics and generate forecasts. The approach is predicated on Takens' theorem, which states that a single time series and a number of lags (dimension; E) are representative of overall system dynamics (Takens 1981; Sugihara and May 1990). Different types of EDM have identified causal relationships in ecological systems (Sugihara et al. 2012) and improved forecast skill in Fraser River sockeye salmon (Ye et al. 2015). See Munch et al. (2020) and Chang et al. (2017) for more general overviews of EDM. We used the software package rEDM (Park et al. 2021) for our analysis.
 
 We focused on multiview embedding (Ye and Sugihara 2016) to predict Bristol Bay sockeye returns. We predicted out-of-sample river and age-class-specific returns for 2000-2019. The idea behind multiview embedding is that there are potentially many valid reconstructions of system dynamics, and evaluating possible different combinations may improve performance. The top Multiview embedding was identified with river-specific data with a maximum E=2. Multiview embedding selects models based on the within-sample fits. So to predict say Kvichak 2.2 returns in the year 2000, we subset data through 1999 for Kvicahk 1.2, 1.3, 2.3, and 2.2, then selected the multiview embedding that had the highest within-sample predictive skill. We evaluated embeddings with maximum dimensions up to E=4, although this increase did not consistently result in improved within-sample predictive skill, perhaps due to noise in the data.
 
@@ -284,7 +284,7 @@ and SRMSE for model \emph{m} is then
 
 MASE is commonly used to judge the accuracy of predictions derived from time series models, since it compares the error of a given model to the error expected by a simple model in which the predictions in a given time step are equal to the observed values in the last time step (a lag-1 model). We use SRMSE instead of MASE to reflect the use of the forecast. MASE considers an error of ten to be twice as bad as an error of five. In the context of salmon forecasting, our primary objective is to avoid massively over or under estimating the pre-season forecast. SRMSE penalizes large errors more than small errors, helping select models that avoid the kinds of large errors that are most problematic for the task of managing salmon populations.
 
-A SRMSE of one means that a model has predictive performance equal to that of the lag-1 model. A SRMSE greater than one indicates that a given model performs worse than the lag-1 benchmark, a SRMSE less than one that a model performs better than the lag-1 benchmark (Hyndman and Koehler 2006).
+A SRMSE of one means that a model has predictive performance equal to that of the lag-1 model. A SRMSE greater than one indicates that a given model performs worse than the lag-1 benchmark, a SRMSE less than one that a model performs better than the lag-1 benchmark (Hyndman and Koehler 2006). We also calculated the predictive R\textsuperscript{2} for each of our relevant results.
 
 \hypertarget{testing-regime}{%
 \subsection*{Testing Regime}\label{testing-regime}}
@@ -322,7 +322,7 @@ The FRI ensemble forecast values were pulled from the historic pre-season foreca
 
 Management of Bristol Bay sockeye salmon operates at the river system level, with inseason fishery managers regulating allowable fishing effort on a daily basis to meet annual escapement goals for each river (Fried and Hilborn 1988; Cunningham et al. 2019). For each river system, we selected the individual model with the lowest SRMSE over the years 2000 to 2019 as the model of choice for that river system. On average the best-performing method reduced the SRMSE in pre-season run forecasts at the river system level by 15\%, with a minimum improvement of 2\% and a maximum of 28\%, relative to the performance of the historic published pre-season FRI forecasts.
 
-River systems varied in both the lowest SRMSE achieved and in the model that produced the best performance. At least one model was able to out-perform or equal a simple lag-1 benchmark model in each of the river systems except for the Nushagak, with the dlm model achieving a SRMSE of 0.69 at the top end in the Kvichak river system, and the rand\_forest model providing only marginal improvement over a lag-1 model with a SRMSE of 1 in the Nushagak river system. The dlm, boost\_tree, and rand\_forest models were selected as the best performing candidate in at least one river system (Fig.\ref{fig:sys-forecast}).
+River systems varied in both the lowest SRMSE achieved and in the model that produced the best performance. At least one model was able to out-perform or equal a simple lag-1 benchmark model in each of the river systems except for the Nushagak, with the dlm model achieving a SRMSE of 0.69 at the top end in the Kvichak river system, and the rand\_forest model providing only marginal improvement over a lag-1 model with a SRMSE of 1 in the Nushagak river system. The dlm, boost\_tree, and rand\_forest models were selected as the best performing candidate in at least one river system (Fig.\ref{fig:sys-forecast}). R\textsuperscript{2} values at the system level ranged from a low of 0.15 in the Naknek to a high of 0.58 in the Igushik.
 
 \begin{figure}
 \centering
@@ -334,7 +334,7 @@ River systems varied in both the lowest SRMSE achieved and in the model that pro
 \subsubsection*{Age Group Forecasts}\label{age-group-forecasts}}
 \addcontentsline{toc}{subsubsection}{Age Group Forecasts}
 
-While total river system returns are the primary metric of interest to the Bristol Bay sockeye fishery, the age composition of the returns are also important given their influence of the average size and therefore price for each salmon harvested, and options for processed product forms. As such we also examined the ability of our tested models to generate predictions at the age group level. In retrospect different models performed best for each of the four age groups considered, and at least one model was able to improve substantially on a lag-1 model in all age groups (Fig.\ref{fig:age-forecast}).
+While total river system returns are the primary metric of interest to the Bristol Bay sockeye fishery, the age composition of the returns are also important given their influence of the average size and therefore price for each salmon harvested, and options for processed product forms. As such we also examined the ability of our tested models to generate predictions at the age group level. In retrospect different models performed best for each of the four age groups considered, and at least one model was able to improve substantially on a lag-1 model in all age groups (Fig.\ref{fig:age-forecast}). R\textsuperscript{2} values at the age group level ranged from a low of 0.19 in the 2.3 age group to a high of 0.71 in the 1.2 age group.
 
 \begin{figure}
 \centering
@@ -346,7 +346,7 @@ While total river system returns are the primary metric of interest to the Brist
 \subsection*{Ensemble Forecasts}\label{ensemble-forecasts}}
 \addcontentsline{toc}{subsection}{Ensemble Forecasts}
 
-In theory the individual models tested here were capable of improving pre-season forecast accuracy over the years 2000-2019 when viewed retrospectively. However, scientists must make annual decisions as to which models to use and how to weigh their predictions. To approximate this process we selected the top performing (in terms of SRMSE) rolling ensemble model (either the FRI or the random forest model-of-models ensemble) for each of the main river systems. In 5 of the 7 evaluated river systems the random forest ensemble produced the preferred ensemble, improving on the FRI forecast by on average 13\% , with the FRI forecasts being preferable of the two ensembles in the remaining 2 river systems, outperforming the random forest ensemble by 39\% .
+In theory the individual models tested here were capable of improving pre-season forecast accuracy over the years 2000-2019 when viewed retrospectively. However, scientists must make annual decisions as to which models to use and how to weigh their predictions. To approximate this process we selected the top performing (in terms of SRMSE) rolling ensemble model (either the FRI or the random forest model-of-models ensemble) for each of the main river systems. In 5 of the 7 evaluated river systems the random forest ensemble produced the preferred ensemble, improving on the FRI forecast by on average 13\% , with the FRI forecasts being preferable of the two ensembles in the remaining 2 river systems, outperforming the random forest ensemble by 39\% . R\textsuperscript{2} values of the best ensemble model at the river sytem level ranged from a low of 0.12 in the Wood age group to a high of 0.52 in the Kvichak age group.
 
 \begin{figure}
 \centering
@@ -366,7 +366,9 @@ The underlying assumption of such an ensemble strategy is that the information n
 \caption{\label{fig:resids}Centered and scaled annual residuals (forecast returns minus observed returns) by river system and model over time. Grey bands indicate areas more than one standard deviation from the mean residuals for a given system. Years in which all the lines are within a grey band indicate periods where all the models struggled to provide reasonable forecasts.}
 \end{figure}
 
-Our residual analysis suggests that in some instances we simply may need to collect different data for inclusion in the forecast model if we hope to improve forecasts. For example, none of our models were able to predict the massive spike in returns of the 1.2 age class to the Wood river system in recent years (Fig.\ref{fig:resids}), indicating that a signal of the process resulting in an increase in salmon survival was not among the suite of predictors explored. We can use the results of our most recent estimated boost\_tree model to examine the relative importance of different included data streams in improving forecast skill (Fig.\ref{fig:imp-plot}). While these importance scores cannot be interpreted in the same manner as regression coefficients, they give us a sense of where we might look for new data to inform prediction. Across all river systems, prior returns in that system were an important predictor (and in many systems past returns in other river systems were also a useful predictor).
+Our residual analysis suggests that in some instances we simply may need to collect different data for inclusion in the forecast model if we hope to improve forecasts. For example, none of our models were able to predict the massive spike in returns of the 1.2 age class to the Wood river system in recent years (Fig.\ref{fig:resids}), indicating that a signal of the process resulting in an increase in salmon survival was not among the suite of predictors explored. Conversely, all of the models performed reasonably well over most of the history of the Nushagak, except for the most recent years. This may be explained by the relative lack of variation in historic returns to the Nushagak prior to 2017, allowing both parametric and non-parametric models to perform equally well.
+
+We can use the results of our most recent estimated boost\_tree model to examine the relative importance of different included data streams in improving forecast skill (Fig.\ref{fig:imp-plot}). While these importance scores cannot be interpreted in the same manner as regression coefficients, they give us a sense of where we might look for new data to inform prediction. Across all river systems, prior returns in that system were an important predictor (and in many systems past returns in other river systems were also a useful predictor).
 
 \begin{figure}
 \centering
@@ -386,7 +388,7 @@ Using multiple types of highly flexible modern computational tools can provide i
 
 That forecasts for individual river systems can be improved by treating historic returns in other river systems as predictors, as evidenced by the machine learning models is an important finding. The historically used parametric salmon forecast methods have largely focused on relationships among age classes within single river systems in isolation. While perhaps not surprising given the juvenile salmon from multiple river systems enter the same area of the eastern Bering Sea during approximately the same season and likely experience similar survival conditions at ocean entry, this result suggests that sharing age-specific return abundance information among salmon stocks and river systems within Bristol Bay can inform and improve predictive performance.
 
-In addition to the return abundance of salmon from the home and neighboring river systems, we found that oceanographic variables including mean sea surface temperature and sea surface air pressure throughout the spatial and temporal range of the oceanic phase of these salmon were informative predictors for some river systems. In addition, as reported by Connors et al. (2020), in some instances the abundance of other salmon species (chum salmon, \emph{Oncorhynchus keta}, in western Kamchatka and northern British Columbia, pink salmon, \emph{Oncorhynchus gorbuscha}, in Prince William sound) proved important predictors of Bristol Bay salmon return abundance (Fig.\ref{fig:imp-plot}). Improved data on at-sea conditions and interspecies competitors may facilitate improved forecasts in the future.
+In addition to the return abundance of salmon from the home and neighboring river systems, we found that oceanographic variables including mean sea surface temperature and sea surface air pressure throughout the spatial and temporal range of the oceanic phase of these salmon were informative predictors for some river systems. In addition, as reported by Connors et al. (2020), in some instances the abundance of other salmon species (chum salmon, \emph{Oncorhynchus keta}, in western Kamchatka and northern British Columbia, pink salmon, \emph{Oncorhynchus gorbuscha}, in Prince William sound) proved important predictors of Bristol Bay salmon return abundance (Fig.\ref{fig:imp-plot}). Going forward, data on freshwater conditions, interspecies competitors, and the size structure of the salmon populations may prove useful in improving forecast accuracy.
 
 Traditional preseason forecast methods for sockeye salmon returning to Bristol Bay and throughout Alaska have often assumed that relationships among age classes are static over time. However, there is increasing recognition of time-varying relationships between Alaskan salmon production and sea surface temperature (Litzow et al. 2018), and large-scale oceanographic processes including the Pacific Decadal Oscillation (Litzow et al. 2020b, 2020a). Given evidence for the dynamic nature of salmon-climate relationships, it should not be surprising that salmon abundance forecast relationships should also exhibit temporal variability. While not informed by environmental data and only leveraging information from a single river system, the DLM approach was found to exhibit superior performance in several river systems and the 2.2 age class. It seems reasonable that the flexible nature of the DLM approach to capture time-varying dynamics in both average abundance and the ratio among age classes permits an indirect accounting for the dynamic salmon-environment processes that are increasingly recognized.
 
